Source/Errors.txt
error: incompatible types: incompatible parameter types in lambda expression
./GameFramework/Display/Animation/Animatable2.java:11: error: clone() in Object cannot implement clone() in Clonable
public class Animatable2<T extends Clonable<T> & Transformable<T>> implements Clonable<Animatable2<T>>, EntityProperty<Animatable2<T>>
                         ^
  attempting to assign weaker access privileges; was public
  where T is a type-variable:
    T extends Object declared in interface Clonable
error: incompatible types: incompatible parameter types in lambda expression
error: incompatible types: bad return type in lambda expression
    missing return value
./GameFramework/Profiles/Profile.java:135: error: cannot find symbol
						universe2.storageHelper.load<SaveState>
						                       ^
  symbol:   variable load
  location: variable storageHelper of type StorageHelper
./GameFramework/Profiles/Profile.java:135: error: cannot find symbol
						universe2.storageHelper.load<SaveState>
						                             ^
  symbol:   variable SaveState
  location: class Profile
./GameFramework/Profiles/Profile.java:291: error: incompatible types: incompatible parameter types in lambda expression
					saveToLocalStorage.apply((SaveState)null), // perform
					                        ^
error: incompatible types: incompatible parameter types in lambda expression
./GameFramework/Profiles/Profile.java:539: error: method from10 in class ControlList<TContext#2,TItem#2,TValue#2> cannot be applied to given types;
				ControlList.from10
				           ^
  required: String,Coords,Coords,DataBinding<TContext#1,TItem#1[]>,DataBinding<TItem#1,String>,double,DataBinding<TContext#1,TItem#1>,DataBinding<TItem#1,TValue#1>,DataBinding<TContext#1,Boolean>,Consumer<Universe>
  found: String,Coords,Coords,DataBinding<Profile,SaveState[]>,DataBinding<SaveState,String>,double,DataBinding<Profile,SaveState>,DataBinding<String,String>,<null>,isLoadNotS[...]run()
  reason: inference variable T has incompatible bounds
    lower bounds: TContext#3,TContext#3,String,SaveState,Object
    lower bounds: SaveState
  where TContext#1,TItem#1,TValue#1,TContext#2,TItem#2,TValue#2,T,TContext#3,TValue#3 are type-variables:
    TContext#1 extends Object declared in method <TContext#1,TItem#1,TValue#1>from10(String,Coords,Coords,DataBinding<TContext#1,TItem#1[]>,DataBinding<TItem#1,String>,double,DataBinding<TContext#1,TItem#1>,DataBinding<TItem#1,TValue#1>,DataBinding<TContext#1,Boolean>,Consumer<Universe>)
    TItem#1 extends Object declared in method <TContext#1,TItem#1,TValue#1>from10(String,Coords,Coords,DataBinding<TContext#1,TItem#1[]>,DataBinding<TItem#1,String>,double,DataBinding<TContext#1,TItem#1>,DataBinding<TItem#1,TValue#1>,DataBinding<TContext#1,Boolean>,Consumer<Universe>)
    TValue#1 extends Object declared in method <TContext#1,TItem#1,TValue#1>from10(String,Coords,Coords,DataBinding<TContext#1,TItem#1[]>,DataBinding<TItem#1,String>,double,DataBinding<TContext#1,TItem#1>,DataBinding<TItem#1,TValue#1>,DataBinding<TContext#1,Boolean>,Consumer<Universe>)
    TContext#2 extends Object declared in class ControlList
    TItem#2 extends Object declared in class ControlList
    TValue#2 extends Object declared in class ControlList
    T extends Object declared in method <T>toArray(T[])
    TContext#3 extends Object declared in method <TContext#3,TValue#3>fromGet(Function<TContext#3,TValue#3>)
    TValue#3 extends Object declared in method <TContext#3,TValue#3>fromGet(Function<TContext#3,TValue#3>)
./GameFramework/Profiles/Profile.java:1137: error: incompatible types: incompatible parameter types in lambda expression
			(Universe universe2) -> universe2.worldCreate(), // perform
			                                             ^
./GameFramework/Display/Visuals/VisualGroup.java:39: error: incompatible types: Object[] cannot be converted to Visual[]
			ArrayHelper.clone(this.children).toArray(new Visual[] {})
			                                        ^
./GameFramework/Storage/StorageHelper.java:71: error: cannot find symbol
			returnValue = this.serializer.deserialize<T>
			                             ^
  symbol:   variable deserialize
  location: variable serializer of type Serializer
./GameFramework/Storage/StorageHelper.java:71: error: cannot find symbol
			returnValue = this.serializer.deserialize<T>
			                                          ^
  symbol:   variable T
  location: class StorageHelper
./GameFramework/Storage/Compressor/CompressorLZW.java:90: error: incompatible types: inference variable T has incompatible bounds
			new ByteStreamFromBytes(Arrays.asList(bytesToCompress)),
			^
    equality constraints: Integer
    lower bounds: int[]
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
./GameFramework/Storage/Compressor/CompressorLZW.java:93: error: incompatible types: no instance(s) of type variable(s) T exist so that List<T> conforms to int[]
		return Arrays.asList(byteStreamCompressed.bytes);
		                    ^
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
15 errors
